--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,16 @@
     <string name="app_name">Budgeting App</string>
     <string name="home">Home</string>
     <string name="details">Details</string>
+    <string name="viewAll">View All</string>
+    <string name="addNew">Add New Transaction</string>
     <string name="hello_home_fragment">Hello Home!</string>
     <string name="hello_details_fragment">Hello Details!</string>
     <string name="hello_input_fragment">Hello Input!</string>
+    <string name="income">Income</string>
+    <string name="debt">Debt</string>
+    <string name="bills">Bills</string>
+    <string name="savings">Savings</string>
+    <string name="investments">Investments</string>
     <string-array name="categories">
         <item>Income</item>
         <item>Housing</item>
@@ -23,4 +30,7 @@
         <item>Gifts</item>
         <item>Miscellaneous</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="textview">TextView</string>
 </resources>
