cleaned up loop logic using enum

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
         <item>Food</item>
         <item>Medical</item>
         <item>Transportation</item>
-        <item>Life Insurance</item>
+        <item>Insurance</item>
         <item>Clothing</item>
         <item>Child Care</item>
         <item>Credit Cards</item>
