--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <string name="app_name">Budgeting App</string>
-    <string name="home">Home</string>
-    <string name="details">Details</string>
-    <string name="viewAll">View All</string>
-    <string name="newTransaction">New Transaction</string>
+    <string name="ui_home">Home</string>
+    <string name="ui_details">Details</string>
+    <string name="ui_view_all">View All</string>
+    <string name="ui_new_transaction">New Transaction</string>
     <string name="addNew">Add New Transaction</string>
     <string name="hello_home_fragment">Hello Home!</string>
     <string name="hello_details_fragment">Hello Details!</string>
