--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="ui_details">Details</string>
     <string name="ui_view_all">View All</string>
     <string name="ui_new_transaction">New Transaction</string>
+    <string name="ui_edit_transaction">Edit Transaction</string>
     <string name="addNew">Add New Transaction</string>
     <string name="hello_home_fragment">Hello Home!</string>
     <string name="hello_details_fragment">Hello Details!</string>
