--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="ui_view_all">View All</string>
     <string name="ui_new_transaction">New Transaction</string>
     <string name="ui_edit_transaction">Edit Transaction</string>
-    <string name="addNew">Add New Transaction</string>
+    <string name="add_new">Add New Transaction</string>
     <string name="hello_home_fragment">Hello Home!</string>
     <string name="hello_details_fragment">Hello Details!</string>
     <string name="hello_input_fragment">Hello Input!</string>
@@ -40,4 +40,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_date">Enter Date</string>
 </resources>
