--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="ui_home">Home</string>
     <string name="ui_details">Details</string>
     <string name="ui_view_all">View All</string>
+    <string name="ui_all_transactions">All Transactions</string>
     <string name="ui_new_transaction">New Transaction</string>
     <string name="ui_edit_transaction">Edit Transaction</string>
     <string name="add_new">Add New Transaction</string>
@@ -19,6 +20,7 @@
     <string name="date">Date</string>
     <string name="description">Description</string>
     <string name="amount">Amount</string>
+    <string name="categories">Categories</string>
     <string-array name="categories">
         <item>Income</item>
         <item>Housing</item>
@@ -41,4 +43,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="zero_amount">$0.00</string>
+    <string name="delete_question">Delete This?</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="update">Update</string>
+    <string name="are_you_sure">Are you sure?</string>
 </resources>
